fix: smoe changes